design improvements + fix neural toggle on homepage + scrollbar styling

--- a/projects/components/theme/components/_advanced-search.scss
+++ b/projects/components/theme/components/_advanced-search.scss
@@ -1,6 +1,8 @@
 .advanced-search {
     margin-top: .5rem;
     padding: .5rem 1rem .5rem .5rem;
+    border: 0;
+    box-shadow: 0px 4px 9px 0px rgba(0,0,0,.08);
 
     .card-header {
         --bs-card-border-width: 0;
