--- a/projects/components/theme/components/_buttons.scss
+++ b/projects/components/theme/components/_buttons.scss
@@ -164,6 +164,11 @@ All buttons styling (except btn-link)
   }
 }
 
+.btn-link:hover {
+  color: $body-text-grey-1 !important;
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
 /**
   Footer action buttons
  */
