--- a/projects/components/theme/components/_results.scss
+++ b/projects/components/theme/components/_results.scss
@@ -7,6 +7,5 @@ sq-result-title .sq-result-title {
 sq-result-source a,
 sq-result-source span {
     color: var(--sq-result-source-color) !important;
-    font-weight: 300;
     font-size: 1rem;
 }
