--- a/projects/vanilla-search/src/app/search-form/search-form.component.scss
+++ b/projects/vanilla-search/src/app/search-form/search-form.component.scss
@@ -5,7 +5,7 @@
 :host {
   width: 13em;
   border-radius: 0.25rem; // Necessary for the box-shadow to render properly
-  box-shadow: 0px 0px 7px 2px rgba(0,0,0,.08);
+  box-shadow: 0px 4px 9px 0px rgba(0,0,0,.08);
 }
 .search-form-control {
   width: 100%;
